--- a/requirements.txt
+++ b/requirements.txt
@@ -18,12 +18,14 @@ blaze==0.11.3
 bleach==3.0.2
 bokeh==1.0.2
 boto==2.49.0
+boto3==1.9.137
+botocore==1.12.137
 Bottleneck==1.2.1
 certifi==2018.11.29
 cffi==1.11.5
 chardet==3.0.4
 Click==7.0
-cloudpickle==0.6.1
+cloudpickle==0.8.1
 clyent==1.2.2
 colorama==0.4.1
 comtypes==1.1.7
@@ -45,6 +47,7 @@ entrypoints==0.2.3
 et-xmlfile==1.0.1
 fastcache==1.0.2
 filelock==3.0.10
+fklearn==1.13.3
 Flask==1.0.2
 Flask-Cors==3.0.7
 future==0.17.1
@@ -67,6 +70,8 @@ itsdangerous==1.1.0
 jdcal==1.4
 jedi==0.13.2
 Jinja2==2.10
+jmespath==0.9.4
+joblib==0.13.2
 jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.2.4
@@ -78,6 +83,7 @@ keyring==17.0.0
 kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
 libarchive-c==2.8
+lightgbm==2.2.3
 llvmlite==0.26.0
 locket==0.2.0
 lxml==4.2.5
@@ -107,7 +113,7 @@ odo==0.5.1
 olefile==0.46
 openpyxl==2.5.12
 packaging==18.0
-pandas==0.23.4
+pandas==0.24.2
 pandocfilters==1.4.2
 parso==0.3.1
 partd==0.3.9
@@ -124,6 +130,7 @@ prometheus-client==0.5.0
 prompt-toolkit==2.0.7
 psutil==5.4.8
 py==1.7.0
+pyarrow==0.13.0
 pycodestyle==2.4.0
 pycosat==0.6.3
 pycparser==2.19
@@ -156,11 +163,15 @@ QtPy==1.5.2
 requests==2.21.0
 rope==0.11.0
 ruamel-yaml==0.15.46
-scikit-image==0.14.1
-scikit-learn==0.20.1
+s3fs==0.2.1
+s3transfer==0.2.0
+schema==0.7.0
+scikit-image==0.15.0
+scikit-learn==0.20.3
 scipy==1.1.0
 seaborn==0.9.0
 Send2Trash==1.5.0
+shap==0.28.5
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.12.0
@@ -175,6 +186,7 @@ spyder-kernels==0.3.0
 SQLAlchemy==1.2.15
 statsmodels==0.9.0
 style==1.1.0
+swifter==0.287
 sympy==1.3
 tables==3.4.4
 tblib==1.3.2
@@ -182,7 +194,7 @@ terminado==0.8.1
 testpath==0.4.2
 toolz==0.9.0
 tornado==5.1.1
-tqdm==4.28.1
+tqdm==4.31.1
 traitlets==4.3.2
 unicodecsv==0.14.1
 update==0.0.1
@@ -196,6 +208,7 @@ win-inet-pton==1.0.1
 win-unicode-console==0.5
 wincertstore==0.2
 wrapt==1.10.11
+xgboost==0.82
 xlrd==1.2.0
 XlsxWriter==1.1.2
 xlwings==0.15.1
